--- a/prototyp1/BlackJack/BlackJack.cbp
+++ b/prototyp1/BlackJack/BlackJack.cbp
@@ -49,6 +49,9 @@
 			<Option compilerVar="CC" />
 		</Unit>
 		<Unit filename="../prototyp1/clientFunctions.h" />
+		<Unit filename="../prototyp1/gamelogic.c">
+			<Option compilerVar="CC" />
+		</Unit>
 		<Unit filename="../prototyp1/gamelogic.h" />
 		<Unit filename="../prototyp1/knappar.c">
 			<Option compilerVar="CC" />
