--- a/prototyp1/BlackJack/Blackjack2015/Blackjack2015.cbp
+++ b/prototyp1/BlackJack/Blackjack2015/Blackjack2015.cbp
@@ -31,6 +31,22 @@
 		<Compiler>
 			<Add option="-Wall" />
 		</Compiler>
+		<Unit filename="coordinates.c">
+			<Option compilerVar="CC" />
+		</Unit>
+		<Unit filename="coordinates.h" />
+		<Unit filename="functions.c">
+			<Option compilerVar="CC" />
+		</Unit>
+		<Unit filename="functions.h" />
+		<Unit filename="gamelogic.c">
+			<Option compilerVar="CC" />
+		</Unit>
+		<Unit filename="gamelogic.h" />
+		<Unit filename="main.c">
+			<Option compilerVar="CC" />
+		</Unit>
+		<Unit filename="multiOS.h" />
 		<Extensions>
 			<code_completion />
 			<envvars />
